REGRESSION (r93614): scrolling div does not repaint https://bugs.webkit.org/show_bug.cgi?id=80641

Reviewed by Simon Fraser.

Source/WebCore:

Test: compositing/repaint/newly-composited-repaint-rect.html

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::updateBacking): When a layer
becomes newly composited and creates its backing, the repaintRect
may become invalid. This patch recomputes repaintRects in this
case.

LayoutTests:

* compositing/repaint/newly-composited-repaint-rect-expected.png: Added.
* compositing/repaint/newly-composited-repaint-rect-expected.txt: Added.
* compositing/repaint/newly-composited-repaint-rect.html: Added.


Canonical link: https://commits.webkit.org/97991@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110401 268f45cc-cd09-0410-ab3c-d52691b4dbfc